# task3_skiplist

./: .gitignore  CMakeLists.txt  README.md
data/: readme.md
src/: CMakeLists.txt  journal_net_activity.h  journal_net_activity.hpp  main.cpp  net_activity.cpp  net_activity.h  ordered_list.h  ordered_list.hpp  skip_list.h  skip_list.hpp  time_stamp.cpp  time_stamp.h
tests/: CMakeLists.txt  journal_test.cpp  skip_list_test.cpp
